[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4", "wheel"]

[project]
authors = [{ name = "Guillaume Latour", email = "guillaume.latour@macq.eu" }]
dependencies = [
  'click',
  'pytz',
  'requests',
  'shapely',
  'dataclass-wizard',
  'pandas',
  'pyarrow',
  'tabulate',
  'geojson',
]
description = "API client allowing to interact with the tomtom REST services."
maintainers = [
  { name = "Guillaume Latour", email = "guillaume.latour@macq.eu" },
]
name = "tomtom_api"
readme = "readme.md"
requires-python = ">=3.8"
version = "2024.7.4"

[project.urls]
repository = "https://stash.macq.eu/projects/RDDS/repos/tomtom-api"

[project.optional-dependencies]
dev = ['ruff', 'pytest']
pyproj = ['pyproj']

[project.scripts]
tomtom-daemon = "tomtom_api.priority_queue.cli:daemon"
tomtom-api = "tomtom_api:__main__"
